--- a/app/src/main/res/layout/activity_product_detail.xml
+++ b/app/src/main/res/layout/activity_product_detail.xml
@@ -203,8 +203,8 @@
 
                 <RelativeLayout
                     android:id="@+id/discountLayout"
-                    android:layout_width="@dimen/_21sdp"
-                    android:layout_height="@dimen/_21sdp"
+                    android:layout_width="@dimen/_23sdp"
+                    android:layout_height="@dimen/_23sdp"
                     android:layout_alignParentLeft="true"
                     android:layout_margin="@dimen/_2sdp"
                     android:background="@drawable/circle_filled_red"
@@ -219,7 +219,7 @@
                         android:text="20%"
                         android:textColor="@color/white"
                         android:textSize="@dimen/_7sdp"
-                        android:visibility="gone" />
+                        android:visibility="visible" />
 
                 </RelativeLayout>
 
