--- a/app/src/main/res/layout/all_category_list_item.xml
+++ b/app/src/main/res/layout/all_category_list_item.xml
@@ -3,22 +3,26 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:background="@color/white"
     android:orientation="vertical">
 
-    <LinearLayout
+    <androidx.cardview.widget.CardView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="@dimen/_6sdp"
-        android:layout_marginTop="@dimen/_15sdp"
+        android:layout_marginTop="@dimen/_12sdp"
         android:layout_marginRight="@dimen/_6sdp"
-        android:orientation="vertical">
+        android:background="@color/white"
+        android:orientation="vertical"
+        app:cardCornerRadius="@dimen/_2sdp">
 
-        <RelativeLayout
+        <LinearLayout
             android:id="@+id/itemLayout"
-            android:layout_width="@dimen/_90sdp"
-            android:layout_height="@dimen/_90sdp"
-            android:gravity="center">
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/_4sdp"
+            android:layout_marginRight="@dimen/_4sdp"
+            android:gravity="center"
+            android:orientation="vertical">
 
             <!--   <ImageView
                    android:id="@+id/categoryBackgroundImageView"
@@ -29,36 +33,27 @@
 
             <ImageView
                 android:id="@+id/categoryImageView"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_centerInParent="true"
+                android:layout_width="@dimen/_95sdp"
+                android:layout_height="@dimen/_90sdp"
+                android:layout_marginTop="@dimen/_2sdp"
                 android:padding="@dimen/_3sdp" />
 
-            <RelativeLayout
+            <TextView
+                android:id="@+id/categoryNameTextView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
-                android:background="#80000000">
+                android:ellipsize="end"
+                android:gravity="center"
+                android:maxLines="2"
+                android:minHeight="@dimen/_30sdp"
+                android:paddingTop="@dimen/_1sdp"
+                android:text="All Categories"
+                android:textColor="@color/black"
+                android:textSize="@dimen/_10sdp"
+                app:fontFamily="@font/roboto" />
 
-                <TextView
-                    android:id="@+id/categoryNameTextView"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:paddingLeft="@dimen/_2sdp"
-                    android:paddingRight="@dimen/_2sdp"
-                    android:text="All Categories"
-                    android:textColor="@color/white"
-                    android:textSize="@dimen/_11sdp"
-                    android:paddingTop="@dimen/_1sdp"
-                    android:paddingBottom="@dimen/_1sdp"
-                    android:textStyle="bold"
-                    app:fontFamily="@font/roboto" />
+        </LinearLayout>
 
-            </RelativeLayout>
-
-        </RelativeLayout>
-
-    </LinearLayout>
+    </androidx.cardview.widget.CardView>
 
 </LinearLayout>
